force-app/main/default/objects/QuoteLineItem/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <formula>UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>