force-app/main/default/objects/QuoteLineItem/fields/Sym_Contact_Lens_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Sym_Contact_Lens_Benefit__c</fullName>
    <formula>Product2.Sym_Contact_Lens_Benefit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Lens Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>