force-app/main/default/objects/QuoteLineItem/fields/Sym_Diagnostic_Exam__c.field-meta.xml
<CustomField>
    <fullName>Sym_Diagnostic_Exam__c</fullName>
    <formula>Product2.Sym_Diagnostic_Exam__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diagnostic Exam</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>