force-app/main/default/objects/QuoteLineItem/fields/Sym_Emergency_Room__c.field-meta.xml
<CustomField>
    <fullName>Sym_Emergency_Room__c</fullName>
    <formula>Product2.Sym_Emergency_Room__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emergency Room</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>