force-app/main/default/objects/QuoteLineItem/fields/Sym_Exam_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Sym_Exam_Frequency__c</fullName>
    <formula>Product2.Sym_Exam_Frequency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Frequency</label>
    <type>Text</type>
</CustomField>