force-app/main/default/objects/QuoteLineItem/fields/Sym_Frame_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Sym_Frame_Benefit__c</fullName>
    <formula>Product2.Sym_Frame_Benefit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frame Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>