force-app/main/default/objects/QuoteLineItem/fields/Sym_Hospital_Admission__c.field-meta.xml
<CustomField>
    <fullName>Sym_Hospital_Admission__c</fullName>
    <formula>Product2.Sym_Hospital_Admission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Admission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>