force-app/main/default/objects/QuoteLineItem/fields/Sym_In_Network_Benefit_Plan_Max_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sym_In_Network_Benefit_Plan_Max_Limit__c</fullName>
    <label>In Network Benefit Plan Max Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>