force-app/main/default/objects/QuoteLineItem/fields/Sym_In_Network_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Sym_In_Network_Coinsurance__c</fullName>
    <label>In Network Coinsurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>