force-app/main/default/objects/QuoteLineItem/fields/Sym_In_Network_Family_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Sym_In_Network_Family_Deductible__c</fullName>
    <label>In Network Family Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>