force-app/main/default/objects/QuoteLineItem/fields/Sym_In_Network_Out_of_Pocket_Max_Ind__c.field-meta.xml
<CustomField>
    <fullName>Sym_In_Network_Out_of_Pocket_Max_Ind__c</fullName>
    <label>In Network Out of Pocket Max Individual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>