force-app/main/default/objects/QuoteLineItem/fields/Sym_IS_Dental__c.field-meta.xml
<CustomField>
    <fullName>Sym_IS_Dental__c</fullName>
    <formula>IF( TEXT(Product2.LOB__c) = &quot;Dental&quot;, TRUE, FALSE)</formula>
    <label>IS_Dental</label>
    <type>Checkbox</type>
</CustomField>