force-app/main/default/objects/QuoteLineItem/fields/Sym_IS_SuppHealth__c.field-meta.xml
<CustomField>
    <fullName>Sym_IS_SuppHealth__c</fullName>
    <formula>IF( TEXT(Product2.LOB__c) = &quot;Supp Health&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS_SuppHealth</label>
    <type>Checkbox</type>
</CustomField>