force-app/main/default/objects/QuoteLineItem/fields/Sym_IS_Vision__c.field-meta.xml
<CustomField>
    <fullName>Sym_IS_Vision__c</fullName>
    <formula>IF( TEXT(Product2.LOB__c) = &quot;Vision&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS_Vision</label>
    <type>Checkbox</type>
</CustomField>