force-app/main/default/objects/QuoteLineItem/fields/Sym_IsSold__c.field-meta.xml
<CustomField>
    <fullName>Sym_IsSold__c</fullName>
    <description>This is used in the display plans lightning web component for the symphony project.</description>
    <formula>if( ISPICKVAL(ProductStage__c, &#39;Sold&#39;), true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sold</label>
    <type>Checkbox</type>
</CustomField>