force-app/main/default/objects/QuoteLineItem/fields/Sym_Lens_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Lens_Copay__c</fullName>
    <formula>Product2.Sym_Lens_Copay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lens Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>