force-app/main/default/objects/QuoteLineItem/fields/sym_monthlyPremium__c.field-meta.xml
<CustomField>
    <fullName>sym_monthlyPremium__c</fullName>
    <description>Holds the monthly premium being returned from the rating engine.</description>
    <label>monthlyPremium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>