force-app/main/default/objects/QuoteLineItem/fields/Sym_Orthodontic_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Sym_Orthodontic_Coverage__c</fullName>
    <label>Orthodontic Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Covered</fullName>
            </value>
            <value>
                <fullName>Child Only</fullName>
            </value>
            <value>
                <fullName>Adult &amp; Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>