force-app/main/default/objects/QuoteLineItem/fields/Sym_Rate_Family__c.field-meta.xml
<CustomField>
    <fullName>Sym_Rate_Family__c</fullName>
    <label>Rate Family</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>