force-app/main/default/objects/QuoteLineItem/fields/Sym_Recommendation_Type__c.field-meta.xml
<CustomField>
    <fullName>Sym_Recommendation_Type__c</fullName>
    <description>This is used to hold what type of plan was returned from the recommendation API. Values are popular or recommended.</description>
    <label>Recommendation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Popular</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>